Sun Oct 22 23:33:00 2000  Christopher Faylor <cgf@cygnus.com>

	* fork.cc (fork): Set sigframe here, since it can pause for a
	considerable amount of time.
	* environ.cc (_addenv): Add debugging.
	* fhandler.cc: Eliminate unneeded include.
	* smallprint.c: Ditto.

Sun Oct 22 12:07:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* pinfo.cc (pinfo_init): Eliminate call to `set_process_privileges'.
	* security.cc (write_sd): Call `set_process_privileges' on the first
	call to `write_sd'.
	(set_process_privileges): Eliminate adjusting SE_BACKUP_NAME privilege.

Sat Oct 21 16:57:23 2000  Christopher Faylor <cgf@cygnus.com>

	* pinfo.cc (pinfo::init): Make PID_EXECED signal creation as well as
	PID_IN_USE.

Sat Oct 21 01:52:54 2000  Christopher Faylor <cgf@cygnus.com>

	* spawn.cc (spawn_guts): Don't do the reparenting step if we notice
	that the child has exited prior to sending the subprocess_ready signal
	(?).

Sat Oct 21 00:46:36 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler.h (fhandler_console): Remove tcsetpgrp.
	* fhandler_console.cc (fhandler_console::tcsetpgrp): Eliminate.
	* fork.cc (fork_parent): Avoid returning same pid twice in a row
	regardless of OS.
	* pinfo.cc (pinfo::init): Rename create argument to flags and treat it
	as such.
	* signal.cc (set_sigcatchers): New function.
	(signal): Use set_sigcatchers to increment or decrement sigcatcher
	tracker.
	(sigaction): Ditto.  Add debugging output.
	* spawn.cc (spawn_guts): Always quote first argv[0] argument when it's
	a COMSPEC shell.

2000-10-20  DJ Delorie  <dj@redhat.com>

	* times.cc (to_time_t): pass zero time as epoch
	* fhandler.cc (fstat): copy atime/ctime from mtime if they're zero

Thu Oct 19 23:31:41 2000  Christopher Faylor <cgf@cygnus.com>

	* external.cc (fillout_pinfo): Pass PID_NOREDIR flag to pinfo init to
	avoid finding execed processes twice.
	* signal.cc (kill_pgrp): Ditto.
	* spawn.cc (spawn_guts): Avoid passing first argument to CreateProcess