@@ -1,3 +1,7 @@
+Mon Oct 23 10:00:00 2000  Corinna Vinschen <corinna@vinschen.de>
+
+	* security.cc: Eliminate C++ comments throughout.
+
 Sun Oct 22 23:33:00 2000  Christopher Faylor <cgf@cygnus.com>
 
 	* fork.cc (fork): Set sigframe here, since it can pause for a
